[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Fonts/StayPixelRegular-EaOxl.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/Background/main_menu.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_top = 12
extra_spacing_bottom = 12
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Theme" id=3]

[node name="Menu" type="Control"]
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = -256.0
margin_right = 266.0
margin_bottom = -12.0
theme = SubResource( 2 )

[node name="Back" type="Button" parent="VBoxContainer"]
margin_right = 238.0
margin_bottom = 57.0
text = "Main Menu"

[node name="Label" type="Label" parent="VBoxContainer"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_top = 61.0
margin_right = 238.0
margin_bottom = 112.0
theme = SubResource( 3 )
text = "Master volume"
align = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 238.0
margin_bottom = 132.0
min_value = -80.0
max_value = 0.0

[node name="Label2" type="Label" parent="VBoxContainer"]
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_top = 136.0
margin_right = 238.0
margin_bottom = 187.0
theme = SubResource( 3 )
text = "HIT EFFECTS VOLUME"
align = 1

[node name="HSlider2" type="HSlider" parent="VBoxContainer"]
margin_top = 191.0
margin_right = 238.0
margin_bottom = 207.0
min_value = -80.0
max_value = 0.0

[node name="Background" type="Sprite" parent="."]
position = Vector2( 536, 343 )
scale = Vector2( 0.555528, 0.646392 )
z_index = -1
texture = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HSlider2" to="." method="_on_HSlider2_value_changed"]
